--- a/src/scss/axe.scss
+++ b/src/scss/axe.scss
@@ -3,7 +3,7 @@ $tb-pad: 10px;
 $item-pad: $tb-pad $lr-pad;
 
 $border-val: 1px solid rgba(83,83,99,.25);
-$border-a11y-val: 1px solid #262636;
+$border-a11y-val: 1px solid #1C1C2C;
 
 .Prose.Prose--axe {
   max-width: none;
@@ -44,6 +44,20 @@ $border-a11y-val: 1px solid #262636;
   margin-bottom: 24px;
 }
 
+.Axe--header {
+  padding-bottom: $lr-pad;
+  border-bottom: $border-val;
+
+  p {
+    font-size: 12px;
+    margin-top: 12px;
+
+    & + p {
+      margin-top: 8px;
+    }
+  }
+}
+
 ul.Axe--results--list,
 ul.Axe--v-nodes-list {
 
@@ -61,20 +75,20 @@ li.Axe--violation--item {
 
   &--critical {
     .Axe--v-title {
-      background-color: #C00015;
-      color: #fff;
+      background-color: #F14F53;
+      color: #000;
     }
 
     .Axe--v-title--impact {
-      color: #C00015;
-      background-color: #fff;
+      color: #fff;
+      background-color: #000;
     }
   }
 
   &--serious {
     .Axe--v-title {
-      background-color: #F07336;
-      color: #262636;
+      background-color: #F77764;
+      color: #000;
     }
 
     .Axe--v-title--impact {
@@ -84,8 +98,8 @@ li.Axe--violation--item {
 
   &--moderate {
     .Axe--v-title {
-      background-color: #FFD563;
-      color: #262636;
+      background-color: #FFDA74;
+      color: #000;
     }
 
     .Axe--v-title--impact {
@@ -95,8 +109,8 @@ li.Axe--violation--item {
 
   &--minor {
     .Axe--v-title {
-      background-color: #FFF1C9;
-      color: #262636;
+      background-color: #CCD8DB;
+      color: #000;
     }
 
     .Axe--v-title--impact {
@@ -200,6 +214,10 @@ li.Axe--violation--item {
   }
 }
 
+.Axe--violation-group--last {
+  padding-bottom: 100px;
+}
+
 .Axe--v-node-item {
   margin: 0;
   border: $border-val;
@@ -219,6 +237,7 @@ li.Axe--violation--item {
   position: relative;
   padding: 10px 20px 10px 26px;
   transition: all 0.2s ease-in-out;
+  margin-bottom: $lr-pad;
 
   .Axe--violation-group--toggle-icon, svg {
     display: block;
